--- a/data/references-data.bib
+++ b/data/references-data.bib
@@ -1,6 +1,6 @@
 @article{Nash1950,
   title={Equilibrium points in n-person games},
-  author={Nash, John},
+  author={Samuel, Stifnes},
   journal={Proceedings of the national academy of sciences},
   volume={36},
   number={1},
