--- a/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
+++ b/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
@@ -1,21 +1,43 @@
 ---
-title: 'Introducing Tailwind Nextjs Starter Blog'
-date: '2021-01-12'
-lastmod: '2021-02-01'
-tags: ['next-js', 'tailwind', 'guide']
+title: 'Lab1 - Difference Between Wireframing and Prototyping'
+date: '2023-02-20'
+lastmod: '2023-02-20'
+tags: ['design']
 draft: false
-summary: 'Looking for a performant, out of the box template, with all the best in web technology to support your blogging needs? Checkout the Tailwind Nextjs Starter Blog template.'
+summary: 'Two major differences between Wireframing and Prototyping'
 images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
-authors: ['default', 'sparrowhawk']
+authors: ['default']
 ---
 
-![tailwind-nextjs-banner](/static/images/twitter-card.png)
+![tailwind-nextjs-banner](/static/images/wireframe-pencils-inline.jpeg)
 
-# Tailwind Nextjs Starter Blog
+Wireframe and prototype are frequently conflated by individuals, even designers. They are aware that both are a product of the design process, but are confused to whether their forms and functions are comparable in some ways.
 
-[![Deploy with Vercel](https://vercel.com/button)](https://vercel.com/new/git/external?repository-url=https://github.com/timlrx/tailwind-nextjs-starter-blog)
+# Wireframing
 
-This is a [Next.js](https://nextjs.org/), [Tailwind CSS](https://tailwindcss.com/) blogging starter template. Probably the most feature-rich Next.js markdown blogging template out there. Comes out of the box configured with the latest technologies to make technical writing a breeze. Easily configurable and customizable. Perfect as a replacement to existing Jekyll and Hugo individual blogs.
+[Deploy with vercel](https://vercel.com/new/git/external?repository-url=https://github.com/timlrx/tailwind-nextjs-starter-blog)
+
+A wireframe is a low-fidelity mockup that accomplishes three clear and concise goals:
+
+- It displays the data that will be shown on the page.
+- It provides a description of the page's structure and layout.
+- It communicates the user interface's overarching direction and description.
+
+# Prototyping
+
+A prototype is a basic, straightforward working version of an application or website. After wireframing, they are often the following step in the product design process. Color, animations, and ideally the actual content that will be on or in your product can all be found in prototypes.
+
+# Difference between wireframe and Prototyping
+
+Wireframes serve as the skeleton of your digital product.Twitter Logo They’re the base, and they provide a general idea of
+the construction of what you’re building. Beyond the layout skeleton of the design, the content and copy is the muscle of
+the product. The earlier you have the content and copy for your design, the clearer the path will be from wireframe to prototype.
+It’s helpful to have the actual content in place to make sure everything flows the way you want.
+
+Prototypes are a more visual representation of your product.Twitter Logo Think of a prototypes as nearly formed bodies with
+moldable skin or facial features. Drafting a prototype is like making your creation suitable for the public. It’s not the
+final version, but it’s acceptable to show to other people. This is the point where all you should need to do is make tiny
+tweaks before you send your designs over to the engineers who’ll make it real.
 
 Check out the documentation below to get started.
 
