--- a/data/blog/10-common-design-mistakes.mdx
+++ b/data/blog/10-common-design-mistakes.mdx
@@ -2,7 +2,7 @@
 title: 'Lab1 - The 2 Most Common Web Design Mistakes'
 date: '2023-02-23'
 lastmod: '2023-02-23'
-tags: ['design']
+tags: ['Design']
 draft: false
 summary: 'The 2 Most Common Web Design Mistakes'
 images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
@@ -13,18 +13,19 @@ The following blog will contain the 2 Most Common Web Design Mistakes
 
 ## Low Contrast or tiny text
 
-Low contrast and small text are poor design choices because they can make text challenging to read and comprehend, which can ruin the user experience. It can be challenging for the eyes to distinguish the text from the background when there is insufficient contrast, especially for those who have visual impairments or are reading in low light.
+Low contrast and small text are poor design choices because they can make text challenging to read and comprehend, which can ruin the user experience.
+It can be challenging for the eyes to distinguish the text from the background when there is insufficient contrast, especially for those who have visual impairments or are reading in low light.
 
-Similar to this, reading text that is too small can be challenging, especially for those who have vision issues or are using small screens. Users may find it challenging to interact with the content, such as clicking links or buttons, when the text is small.
+Reading too small text can be very challenging, especially for the people who have vision impairment or are using the website/application of smaller screens. Users will find it challenging to interact with elements such as clicking on buttons or icons.
 
-These design errors may make it difficult for users to interact with and comprehend the content, which may cause frustration and ultimately lead to a bad user experience. It's crucial to check that the text and background contrast is adequate and that the text is readable and large enough for users to easily read.
+These design errors make it difficult for the user to understand content and ultimately cause frustration which leads to an overall bad user experience. There are plenty of online tools such as https://webaim.org/resources/contrastchecker/ to check that the text and background contrast meet the requirements and everything on the website is readable.
 
 ## Design mistake of mobile design on big screens
 
-The design mistake of mobile design on big screens is that it can result in a poor user experience for users on larger screens. Mobile designs are optimized for smaller screens and have different design considerations compared to desktop or larger screens. When mobile design is used on big screens, the content can appear stretched, the text can be too small, and the layout can look unbalanced.
+Mobile designs are only optimized for smaller screens. Implementing them for big screens will result in poor user experience. Mobile and responsive design have specific design considerations as compared to desktop or larger screens. Content appears to be stretched out, the text could be too small and layout will look unbalanced if mobile design is displayed on bigger screens.
 
-One common issue with mobile design on big screens is that it often results in a lack of white space or negative space. Mobile designs are typically more compact and efficient with space, but when they are stretched out to larger screens, they can look cluttered and overwhelming. This can make it challenging for users to navigate the content and can result in a confusing user experience.
+There is a concept of white space also known as negative space which is the empty space around the content and functional elements of a page. The main role of which is to let the design appear breathable by reducing the text and functional elements that users see in one glance. A common issue with mobile design on large screen is that it lacks this white space. Since mobile designs are typically compact and efficient with space, they can look cluttered when stretched out over large screens.
 
-Another issue with mobile design on big screens is that the navigation may not be optimized for larger screens. For example, if a mobile menu is used on a larger screen, it can look too small and be difficult to interact with. This can result in a frustrating user experience, where users have to spend more time trying to navigate the content than actually engaging with it.
+Another issue of mobile design on large screens is navigation between different screens and elements. Menu and buttons are usually made small for mobile, using appropriate font sizes and spacing. They can be difficult to interact with if they appear small even on bigger screens.
 
-To avoid this design mistake, it's important to consider the context and screen size when designing for mobile. Responsive design, which adjusts the layout and design based on the screen size, can help ensure that the user experience is optimized for all devices. Additionally, designers should focus on providing ample white space, using appropriate font sizes, and optimizing the navigation for larger screens.
+Therefore it is important to keep the design optimized for every breakpoint. The design should be responsive for larger and smaller screens.
