--- a/data/blog/design-mistake-twitter-search.mdx
+++ b/data/blog/design-mistake-twitter-search.mdx
@@ -2,7 +2,7 @@
 title: 'Lab1 - Design Terminology Twitter Search'
 date: '2023-02-23'
 lastmod: '2023-02-23'
-tags: ['design']
+tags: ['Design']
 draft: false
 summary: 'A search on twitter on some design terms and terminologies'
 images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
@@ -13,8 +13,27 @@ The following blog will contain a search on some of the design terminologies
 
 ## Wireframing and Prototyping Tools
 
-- A conference called Iberian Technology Summit happening in 2023 where there are talks about UI/UX, Design which include **Wireframing and Prototyping Tools**
+- A conference called Iberian Technology Summit happening in 2023 where there are talks about UI/UX, Design which include \*\*Wireframing and Prototyping Tools
 
 ## Inflexible Inputs
 
 Inflexible input fields – Adjust the fields to the content – like add spaces for credit card numbers or phone numbers. Doing this reduces mistakes by [@evgeniaeiter](https://twitter.com/evgeniaeiter).
+
+## Top People and Agencies that are doing amazing work in UI/UX
+
+While doing this search, I followed some amazing UI/UX designer and agencies. Here is a list of few of them
+
+### People
+
+- [Will Gibson](https://twitter.com/willgibs)
+- [Davio White](https://twitter.com/Daviowhite)
+- [Elle Mahoney](https://twitter.com/ellevenio)
+- [Maiane](https://twitter.com/sheisacreative)
+- [Krisztina Szerovay](https://twitter.com/krisztaszerovay)
+- [Alex Dovhyi](https://twitter.com/dovhyi)
+
+### Acounts
+
+- [Musemind](https://twitter.com/musemindagency)
+- [UXSpring](https://twitter.com/uxspring)
+- [Diagram](https://twitter.com/diagram)
