--- a/data/blog/four-seo-guidelines.mdx
+++ b/data/blog/four-seo-guidelines.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Lab2 - Outline four SEO guidelines'
-date: '2023-02-23'
-lastmod: '2023-02-23'
-tags: ['design', 'seo']
+date: '2023-02-24'
+lastmod: '2023-02-24'
+tags: ['HTML', 'seo']
 draft: false
 summary: 'Outline four SEO guidelines'
 images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
@@ -11,25 +11,25 @@ authors: ['default']
 
 The following blog will contain four SEO guidelines.
 
-Search Engine Optimization (SEO) is the practice of improving a website's visibility and ranking in search engine results pages. Here are four important SEO guidelines to consider:
+SEO (Search Engine Optimization) is how one can increase the ranking of their website on search engine pages such as GOOGLE search.
 
-1. Use relevant and high-quality content: Your website's content should be relevant to the search terms users are using to find information related to your website's topics. Additionally, high-quality content that provides value to users can help improve your website's search engine ranking. Ensure that your content is well-written, informative, and free from errors.
+1 - Create high-quality content. Your website's content should be well written, informative and should be directly targeting your audience. High-quality content that provides value to users can help improve your website's search engine ranking.
 
-2. Optimize website structure and design: Search engines use crawlers to index and rank web pages, and a website's structure and design can influence how effectively crawlers can access and interpret the content. Use clear and descriptive URLs, organize content using headers, and ensure that your website is easy to navigate. Additionally, optimize images and videos for faster load times.
+2 - Optimize website structure and design. Search engines use crawlers to index and rank web pages, and a website's structure and design can influence how effectively crawlers can access and interpret the content. Use clear and descriptive URLs, organize content using headers, and ensure that your website is easy to navigate. Additionally, optimize images and videos for faster load times.
 
-3. Build quality backlinks: A backlink is a link from another website to your website. Search engines use backlinks to determine the authority and relevance of a website. Building quality backlinks can help improve your website's ranking. Seek backlinks from reputable and relevant websites, and avoid spammy or low-quality backlinks that can harm your website's ranking.
+3 - Build quality backlinks. A backlink is a link from another website to your website. Search engines use backlinks to determine the authority and relevance of a website. Building quality backlinks can help improve your website's ranking. Seek backlinks from reputable and relevant websites, and avoid spammy or low-quality backlinks that can harm your website's ranking.
 
-4. Use appropriate and descriptive metadata: Metadata is information about your website that is not visible to users but is used by search engines to understand and categorize your content. Use relevant and descriptive title tags and meta descriptions that accurately reflect the content on each page. Additionally, use appropriate header tags to structure content and use alt tags to describe images.
+4 - Use appropriate and descriptive metadata. Metadata is information about your website that is not visible to users but is used by search engines to understand and categorize your content. Use relevant and descriptive title tags and meta descriptions that accurately reflect the content on each page. Additionally, use appropriate header tags to structure content and use alt tags to describe images.
 
 Two pieces of code that can be included on the Fish Creek website to improve the SEO of the website.
 
-1. Use meta description tag
+1 - Use meta description tag
 
 ```
 <meta name="description" content="Learn more about Fish Creek and how it is better than other creeks" />
 ```
 
-2. Use 'alt' attribute on 'img' tag
+2 - Use 'alt' attribute on 'img' tag
 
 ```
 <img src="Cooking.jpg" alt="cooking pork and onions">
