--- a/data/blog/identify-four-meta-tag-uses.mdx
+++ b/data/blog/identify-four-meta-tag-uses.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Lab2 - Identify four different uses of the meta tag in html.'
-date: '2023-02-23'
-lastmod: '2023-02-23'
-tags: ['html', 'seo']
+date: '2023-02-24'
+lastmod: '2023-02-24'
+tags: ['HTML', 'seo']
 draft: false
 summary: 'Identify four different uses of the meta tag in html.'
 images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
@@ -11,28 +11,30 @@ authors: ['default']
 
 The following blog will contain four different uses of the meta tag in html.
 
-The meta tag is a versatile HTML element that can be used for a variety of purposes. Here are four different uses of the meta tag in HTML:
+Meta elements are tags used in HTML documents to provide structured metadata about a Web page.They can be only included in the head section of a web page.
+Multiple Meta elements with different attributes can be used on the same page.
+Meta elements can be used to specify page description, keywords and any other metadata not provided through the other head elements and attributes. Here are four different uses of the meta tag in HTML:
 
-1. Specifying the character encoding: The meta tag can be used to specify the character encoding of an HTML document using the "charset" attribute. For example, the following meta tag specifies that the document is encoded in UTF-8:
-
-```
-<meta charset="UTF-8">
-```
-
-2. Setting the viewport: The meta tag can be used to set the viewport of a webpage for mobile devices. The "viewport" attribute can be used to specify the width of the viewport and the initial zoom level. For example:
+1 - Meta charset encoding: This charset attribute in meta tag can be used to specify the character encoding. For most cases UTF-8 charset, which covers almost all the characters and symbols in the world.
 
 ```
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" >
 ```
 
-3. Providing keywords for search engines: The meta tag can be used to provide a list of keywords for search engines to index using the "keywords" attribute. For example:
+2 - Setting the viewport of a webpage for mobile devices can be achieved via this meta tag. The viewport of any device is the visible screen are and it can be specified along with the initial zoom level by The "viewport" attribute.
 
 ```
-<meta name="keywords" content="HTML, meta tags, search engines">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 ```
 
-4. Describing the content of a webpage: The meta tag can be used to provide a brief description of the content of a webpage, which can be used by search engines and social media sites when displaying a link to the page. The "description" attribute can be used for this purpose. For example:
+3 - Providing keywords for search engines: The meta tag can be used to provide a list of keywords for search engines to index using the "keywords" attribute.
 
 ```
-<meta name="description" content="Learn about the different uses of the meta tag in HTML.">
+<meta name="keywords" content="HTML, meta tags, search engines" >
+```
+
+4 - Describing the content of a webpage: The meta tag can be used to provide a brief description of the content of a webpage, which can be used by search engines and social media sites when displaying a link to the page. The "description" attribute can be used for this purpose.
+
+```
+<meta name="description" content="Learn about the different uses of the meta tag in HTML." >
 ```
