--- a/data/blog/flat-design.mdx
+++ b/data/blog/flat-design.mdx
@@ -1,38 +1,36 @@
 ---
 title: 'Lab3 - What is the meaning of flat web design?'
-date: '2023-02-23'
-lastmod: '2023-02-23'
-tags: ['design']
+date: '2023-02-25'
+lastmod: '2023-02-25'
+tags: ['Design']
 draft: false
-summary: 'What is the meaning of flat web design?'
+summary: 'What is the meaning of flat web design'
 images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
 authors: ['default']
 ---
 
-The following blog will contain the explanation of flat web design?
+The following blog will contain the explanation of flat web design
 
-Flat web design is a minimalist design style that emphasizes simplicity, use of color, and typography. It's characterized by the use of simple and geometric shapes, minimal use of shadows, gradients, and textures, and a focus on typography and color to create a clean and modern look. Flat design is often used in combination with a bold and vibrant color palette, which can help to make the website more engaging and eye-catching.
+Flat web design is a minimalist design style that uses two-dimensional UI elements to keep things as clean and simple as possible. It can be identified with simple geometric shapes, little to no use of shadows, gradients or textures and bold text and bright colors.
 
 Many websites use flat design, including:
 
-1. Microsoft: The Microsoft website is a good example of flat design. It uses bold colors and simple shapes to create a modern and visually engaging design.
+1. `Microsoft`: The Microsoft website is a good example of flat design. It uses bold colors and simple shapes to create a modern and visually engaging design.
 
-2. Dropbox: Dropbox's website uses flat design, incorporating simple shapes and bold typography to create a clean and minimalist look.
+2. `Dropbox`: Dropbox's website uses flat design, incorporating simple shapes and bold typography to create a clean and minimalist look.
 
-3. Apple: Apple's website also uses flat design, with a focus on typography, simple shapes, and bold colors.
+3. `Apple`: Apple's website also uses flat design, with a focus on typography, simple shapes, and bold colors.
 
-4. Stripe: Stripe's website uses a flat design, with a clean and modern look that is achieved through the use of simple shapes, bold colors, and a focus on typography.
+4. `Stripe`: Stripe uses a clean and modern look that is achieved through the use of simple shapes, bold colors, and a focus on typography.
 
-Overall, flat design has become increasingly popular in recent years due to its modern and minimalist look, and its ability to work well on both desktop and mobile devices.
+Flat design has become more and more popular in recent times due to its modern and minimalist look, and its ability to work well on both desktop and mobile devices.
 
 Neumorphism, also known as soft UI, is a relatively new design trend that has emerged in recent years. It's a style that attempts to combine elements of skeuomorphism and flat design, with a focus on creating user interfaces that look and feel more tactile and three-dimensional. Neumorphic interfaces typically feature soft shadows, gradients, and glows, creating the illusion of depth and dimensionality.
 
 While the trend is still emerging, some websites that use neumorphism include:
 
-1. Audeze: Audeze, a high-end audio equipment manufacturer, uses neumorphism on their website to create a clean and modern look that showcases their products.
+1. `Kultprosvet`: Kultprosvet is a digital marketing agency that uses neumorphism on their website to create a bold and eye-catching design that draws attention to their services.
 
-2. Kultprosvet: Kultprosvet is a digital marketing agency that uses neumorphism on their website to create a bold and eye-catching design that draws attention to their services.
+2. `Fonts Ninja`: Fonts Nina, a chrome extention that lets you discove all fonts used in any website. You can discover, inspect and try the fonts on your design on runtime. Fonts Ninja website uses soft neumorphistic design animations.
 
-3. Wizely: Wizely, a financial management app, uses neumorphism to create a user interface that feels more tactile and intuitive. The design is intended to make it easier for users to interact with the app and manage their finances.
-
-Overall, neumorphism is a design trend that is still evolving, and it remains to be seen how widely it will be adopted in the future. However, it has gained popularity in recent years as designers continue to experiment with new ways to create more engaging and user-friendly interfaces.
+Neumorphism is a design trend that is still evolving, and it remains to be seen how widely it will be adopted in the future.
